<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.craftingapps.status.saver.views.fragment.VideosFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/windowBackground">

        <com.google.android.gms.ads.AdView
            android:id="@+id/trigger_fragment_ad_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_banner_ad_unit" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/videos_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trigger_fragment_ad_id"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:paddingBottom="5dp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/empty_record_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/no_video" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/no_status"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/no_records"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/no_permission_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_permission"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />


    </RelativeLayout>
</layout>

