<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.craftingapps.status.saver.views.activity.StatusDetailsActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/windowBackgroundDark"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/details_adds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_banner_ad_unit"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_status_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/details_adds" />

        <ImageView
            android:id="@+id/iv_play_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:onClick="@{(view)->activity.onClick(view)}"
            android:src="@drawable/ic_play" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            style="@style/FabMenuStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="60dp"
            app:menu_labels_ellipsize="end"
            app:menu_labels_position="left"
            app:menu_labels_singleLine="true"
            app:menu_openDirection="up">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_save"
                style="@style/FabMenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(view)->activity.onClick(view)}"
                android:src="@mipmap/save"
                app:fab_label="@string/save"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_share"
                style="@style/FabMenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(view)->activity.onClick(view)}"
                android:src="@mipmap/share"
                app:fab_label="@string/share"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_delete"
                style="@style/FabMenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(view)->activity.onClick(view)}"
                android:src="@mipmap/delete"
                app:fab_label="@string/delete"
                app:fab_size="mini" />

        </com.github.clans.fab.FloatingActionMenu>


        <!--<com.google.android.gms.ads.AdView-->
        <!--xmlns:ads="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/adView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom"-->
        <!--android:visibility="visible"-->
        <!--ads:adSize="BANNER"-->
        <!--ads:adUnitId="@string/banner_ad_id"-->
        <!--android:layout_alignParentBottom="true"/>-->

    </RelativeLayout>

</layout>